Fixed wraping of long title in pickers.

--- a/RockWeb/Styles/_components.less
+++ b/RockWeb/Styles/_components.less
@@ -50,6 +50,10 @@
         span {
             float: left;
             margin-right: 6px;
+            width: 140px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .caret {
